# tepy

./: .gitignore  README.md  pyproject.toml
tepy/: __init__.py
tepy/components/: app.py  autocomplete.py  editor.py  keys.py  logger.py  mode.py  renderer.py  table.py
tepy/ui/: base_ui.py
tepy/widgets/: help.py  loader.py
