[tool.poetry]
name = "tepy"
version = "0.1.0"
description = ""
authors = ["Elran Shefer <elran777@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Environment :: Console :: Curses",
]
packages = [
    { include = "tepy" },
]
homepage = "https://github.com/IamShobe/tepy"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
blessed = "^1.20.0"
colored = "^1.4.2"
pyperclip = "^1.8.2"
cached-property = "^1.5.2"
attrdict = "^2.0.1"
pydash = "^7.0.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.13.2"
ruff = "^0.0.269"
mypy = "^1.3.0"
types-pyyaml = "^6.0.12.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
